--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ajv-keywords": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6",
     "sass": "^1.77.6",
     "web-vitals": "^2.1.4"
   },
