--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
@@ -13,9 +15,16 @@
     "ajv": "^8.16.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.2",
+    "cloudinary": "^2.2.0",
+    "cloudinary-core": "^2.13.1",
+    "cloudinary-react": "^1.8.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
+    "net": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.6",
